objects/CAPCountryWeight__c.object
<CustomObject>
    <fields>
        <fullName>ClassificationLevel1__c</fullName>
        <label>Classification Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>IG</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>RT</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>WD</fullName>
                </value>
                <value>
                    <fullName>XX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryWeight__c</fullName>
        <label>Country Weight</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>CAP_Country_Weights</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BDZ</fullName>
                </value>
                <value>
                    <fullName>BD1</fullName>
                </value>
                <value>
                    <fullName>BD3</fullName>
                </value>
                <value>
                    <fullName>BD4</fullName>
                </value>
                <value>
                    <fullName>BD6</fullName>
                </value>
                <value>
                    <fullName>BD9</fullName>
                </value>
                <value>
                    <fullName>EN1</fullName>
                </value>
                <value>
                    <fullName>EN2</fullName>
                </value>
                <value>
                    <fullName>EN3</fullName>
                </value>
                <value>
                    <fullName>IDZ</fullName>
                </value>
                <value>
                    <fullName>ID1</fullName>
                </value>
                <value>
                    <fullName>ID2</fullName>
                </value>
                <value>
                    <fullName>ID3</fullName>
                </value>
                <value>
                    <fullName>ID4</fullName>
                </value>
                <value>
                    <fullName>ID5</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>IT2</fullName>
                </value>
                <value>
                    <fullName>IT3</fullName>
                </value>
                <value>
                    <fullName>PW1</fullName>
                </value>
                <value>
                    <fullName>PW3</fullName>
                </value>
                <value>
                    <fullName>ID6</fullName>
                </value>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>ID7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuestionSequence__c</fullName>
        <label>Question Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>Q5</fullName>
                </value>
                <value>
                    <fullName>Q6</fullName>
                </value>
                <value>
                    <fullName>Q7</fullName>
                </value>
                <value>
                    <fullName>Q8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_UniqueCountryWeight__c</fullName>
        <label>TECH_Unique CountryWeight</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Master Profile Country Weight</label>
    <listViews>
        <fullName>APU</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Argentina,Paraguay,Uruguay</value>
        </filters>
        <label>APU</label>
        <language>en_US</language>
        <sharedTo>
            <group>AR_Delegated_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ClassificationLevel1__c</columns>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TECH_UniqueCountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <label>Brazil</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_Business_Reseller</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>ClassificationLevel1__c</field>
            <operation>equals</operation>
            <value>VR</value>
        </filters>
        <label>Brazil - Business Reseller</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_Contractors</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>ClassificationLevel1__c</field>
            <operation>equals</operation>
            <value>LC</value>
        </filters>
        <label>Brazil - Contractors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_Distributor_Wholesales</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>ClassificationLevel1__c</field>
            <operation>equals</operation>
            <value>WD</value>
        </filters>
        <label>Brazil - Distributor Wholesales</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_End_User</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>ClassificationLevel1__c</field>
            <operation>equals</operation>
            <value>EU</value>
        </filters>
        <label>Brazil - End User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_OEM</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>ClassificationLevel1__c</field>
            <operation>equals</operation>
            <value>OM</value>
        </filters>
        <label>Brazil - OEM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_Panel_Builder</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>ClassificationLevel1__c</field>
            <operation>equals</operation>
            <value>PB</value>
        </filters>
        <label>Brazil - Panel Builder</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_Retailer</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>ClassificationLevel1__c</field>
            <operation>equals</operation>
            <value>RT</value>
        </filters>
        <label>Brazil - Retailer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_Specifier</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>ClassificationLevel1__c</field>
            <operation>equals</operation>
            <value>SP</value>
        </filters>
        <label>Brazil - Specifier</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_System_Integrator</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>CountryWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>ClassificationLevel1__c</field>
            <operation>equals</operation>
            <value>SI</value>
        </filters>
        <label>Brazil - System Integrator</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DE_All_Germany</fullName>
        <columns>NAME</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>CountryWeight__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <label>DE - All (Germany)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FI_All</fullName>
        <columns>NAME</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>CountryWeight__c</columns>
        <columns>QuestionSequence__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Finland</value>
        </filters>
        <label>FI - All</label>
        <language>en_US</language>
        <sharedTo>
            <group>FI_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HU_all_account_master_profile</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ClassificationLevel1__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CountryWeight__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>QuestionSequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Hungary</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>HU</value>
        </filters>
        <label>HU_all account master profile</label>
        <language>en_US</language>
        <sharedTo>
            <group>HU_ADMIN</group>
            <group>HU_ALLSALES</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CW-{0000}</displayFormat>
        <label>CAP Country Weight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Master Profile Country Weights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CAP_VR_Q316SLS01_CountryDataValidate</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c ) &amp;&amp; ISBLANK( TEXT(ClassificationLevel1__c)) &amp;&amp; ISBLANK( Country__c ) &amp;&amp; ISBLANK( CountryWeight__c ) &amp;&amp; ISBLANK( TEXT(MarketSegment__c )) &amp;&amp; ISBLANK(TEXT(QuestionSequence__c))</errorConditionFormula>
        <errorMessage>Please fill in all fields of CAP Global Master Data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAP_VR_Q316SLS02_ValidateWeight</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c ) &amp;&amp;  CountryWeight__c &gt; 5</errorConditionFormula>
        <errorMessage>Weight value cannot be more than 5</errorMessage>
    </validationRules>
</CustomObject>